test/scc_test/decl/semantic-errors/030.a
030.t:3:5: error: width of 'a' exceeds its type